RESOLVED FIXED44963
Overhanging float in last column of multi-column block is positioned wrong
https://bugs.webkit.org/show_bug.cgi?id=44963
Summary Overhanging float in last column of multi-column block is positioned wrong
mitz
Reported 2010-08-31 10:18:29 PDT
In the attached test case, the purple float is positioned outside the black border of the multi-column block. It should be inside the block, in the second column, right below the yellow rectangle.
Attachments
Test case (276 bytes, text/html)
2010-08-31 10:18 PDT, mitz
no flags
Patch (1.47 KB, patch)
2010-09-01 10:37 PDT, Dave Hyatt
mitz: review+
Patch (87.34 KB, patch)
2010-09-01 10:43 PDT, Dave Hyatt
simon.fraser: review+
mitz
Comment 1 2010-08-31 10:18:46 PDT
Created attachment 66067 [details] Test case
Dave Hyatt
Comment 2 2010-08-31 11:09:11 PDT
Floats just shouldn't be allowed to overhang into following sibling blocks.
Dave Hyatt
Comment 3 2010-09-01 10:37:20 PDT
Dave Hyatt
Comment 4 2010-09-01 10:43:13 PDT
Created attachment 66234 [details] Patch Here's a patch with the layout test move.
Dave Hyatt
Comment 5 2010-09-01 11:15:15 PDT
Fixed in r66612.
Note You need to log in before you can comment on or make changes to this bug.