WebCore: https://bugs.webkit.org/show_bug.cgi?id=44963, overhanging floats aren't positioned properly when they occur in multi-column layout.  Don't let floats overhang in multi-column blocks, since they are part of the column layout.

Reviewed by Dan Bernstein and Simon Fraser.

fast/multicol/float-pagination-failure now succeeds, so will rename and move it.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addOverhangingFloats):

LayoutTests: https://bugs.webkit.org/show_bug.cgi?id=44963, rename the float-paginate-failure test since it now
succeeds.

Reviewed by Dan Bernstein and Simon Fraser.

* fast/multicol/float-paginate-failure.html: Removed.
* fast/multicol/float-paginate.html: Added.
* platform/mac/fast/multicol/float-paginate-expected.checksum: Added.
* platform/mac/fast/multicol/float-paginate-expected.png: Added.
* platform/mac/fast/multicol/float-paginate-expected.txt: Added.
* platform/mac/fast/multicol/float-paginate-failure-expected.checksum: Removed.
* platform/mac/fast/multicol/float-paginate-failure-expected.png: Removed.
* platform/mac/fast/multicol/float-paginate-failure-expected.txt: Removed.



Canonical link: https://commits.webkit.org/57372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66612 268f45cc-cd09-0410-ab3c-d52691b4dbfc